--- a/index.html
+++ b/index.html
@@ -1,90 +1,83 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
-  <title>Neon Rift Runner</title>
-  <link rel="stylesheet" href="./style.css" />
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"/>
+  <title>RIFTPULSE</title>
+  <link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
-  <div class="app">
-    <aside class="panel">
+  <div class="app" id="app">
+    <aside class="panel" id="panel">
       <div class="brand">
         <span class="dot"></span>
-        <div class="title">
-          <div class="name">NEON RIFT RUNNER</div>
-          <div class="tag">tap-to-jump • survive the rift</div>
+        <div>
+          <div class="name">RIFTPULSE</div>
+          <div class="tag">OG dash-style • tap to jump</div>
         </div>
       </div>
 
       <div class="card">
         <div class="row">
-          <div class="label">Status</div>
+          <div class="muted">Status</div>
           <div class="pill" id="statusPill">Menu</div>
         </div>
 
-        <button class="btn primary" id="btnPlay">
-          <span>Play</span><span class="kbd">Click</span>
-        </button>
-
-        <button class="btn" id="btnLevels">
-          <span>Levels</span><span class="kbd">L</span>
-        </button>
-
-        <button class="btn" id="btnRestart">
-          <span>Restart</span><span class="kbd">R</span>
-        </button>
+        <button class="btn primary" id="btnPlay">Play</button>
+        <button class="btn" id="btnLevels">Levels</button>
+        <button class="btn" id="btnRestart">Restart</button>
 
         <div class="sep"></div>
 
-        <div class="toggles">
-          <label class="toggle">
-            <input type="checkbox" id="musicToggle" checked />
-            <span>Music</span>
-          </label>
-          <label class="toggle">
-            <input type="checkbox" id="particlesToggle" checked />
-            <span>Particles</span>
-          </label>
-          <label class="toggle">
-            <input type="checkbox" id="shakeToggle" checked />
-            <span>Shake</span>
-          </label>
-        </div>
+        <label class="toggle">
+          <input type="checkbox" id="musicToggle" checked/>
+          <span>Music</span>
+        </label>
 
-        <div class="hint">
+        <label class="toggle">
+          <input type="checkbox" id="fxToggle" checked/>
+          <span>Sound FX</span>
+        </label>
+
+        <label class="toggle">
+          <input type="checkbox" id="liteToggle"/>
+          <span>Lite Mode (more FPS)</span>
+        </label>
+
+        <div class="help">
           Jump: <b>Space</b> / <b>Click</b><br/>
           Pause: <b>P</b> • Menu: <b>Esc</b><br/>
-          (Only the sidebar <b>Play</b> starts the game)
+          (Only this <b>Play</b> starts the game)
         </div>
       </div>
     </aside>
 
     <main class="stage">
       <div class="topbar" id="topbar">
-        <div class="left">
-          <div class="heading" id="screenTitle">Pick a Level</div>
-          <div class="sub" id="screenSub">Select one, then press Play</div>
+        <div>
+          <div class="title" id="screenTitle">Pick a Level</div>
+          <div class="subtitle" id="screenSub">Select one, then press Play</div>
         </div>
-        <div class="right">
-          <div class="stat">Best: <span id="bestPct">0%</span></div>
-          <div class="stat">Run: <span id="runPct">0%</span></div>
+        <div class="stats">
+          <div>Best: <span id="bestPct">0%</span></div>
+          <div>Run: <span id="runPct">0%</span></div>
         </div>
       </div>
 
       <div class="content">
         <div class="levels" id="levelsList"></div>
-        <canvas id="game" width="960" height="540"></canvas>
+        <canvas id="game"></canvas>
       </div>
 
-      <footer class="footer" id="footer">
-        Pro tip: click Play → it goes fullscreen. Space won’t start, only jump.
-      </footer>
+      <div class="footer" id="footer">
+        Tip: Play → fullscreen. You only see the level until Esc.
+      </div>
     </main>
   </div>
 
   <script src="./main.js"></script>
 </body>
 </html>
+
 
 
